tests/frontend/pass/smoke/smoke.act
contract A

transition f
interface f(uint x)

returns 1