tests/frontend/fail/array/bad_deref2.act
contract A

constructor
interface constructor()

creates

  uint[2][2] x :=  [[0,0],[0,0]]

ensures
  x[1] == 2
